src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css');

/* === Global Settings === */

:root {
    --primary-font: 'Playfair Display', system-ui, Helvetica, Arial, sans-serif;
    --secondary-font: 'Roboto', system-ui, Helvetica, Arial, sans-serif;
    --main-color: #615770;
    --box-shadow: 2px 2px 8px rgba(31, 31, 31, 0.6);
}

html {
    height: 100%;
    background-color: var(--main-color);
}

body {
    background-color: white;
    height: 100%;
    display: grid;
    grid-template-rows: auto 1fr auto;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1 {
    font-family: var(--primary-font);
    font-size: 2.25rem;
    font-weight: 300;
}

h2 {
    font-family: var(--primary-font);
    font-size: 1.75rem;
    font-weight: 200;
}

h3 {
    font-family: var(--primary-font);
    font-size: 1.25rem;
    font-weight: 200;
}

p {
    font-family: var(--secondary-font);
}

a {
    text-decoration: none;
    color: black;
}

i {
    font-size: 1.5rem;
}

/* === Header === */

header {
    padding: 1rem;
    position: relative;
    background-color: white;
}

.colored-slant-container {
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.colored-slant {
    position: absolute;
    background-color: var(--main-color);
    top: 0;
    left: 0;
    width: 150%;
    height: 100%;
    transform: translateY(calc(-100% + 250px)) rotate(-10deg);
    transform-origin: bottom left;
}

.header-content {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 2;
}

.header-content a {
    text-decoration: underline;
}

.main-portrait-container {
    margin-top: 1rem;
    position: relative;
    border-radius: 0.25rem;
    box-shadow: var(--box-shadow);
}

header h1 {
    background-color: rgba(39, 39, 39, 0.8);
    color: white;
    position: absolute;
    bottom: 0.5rem;
    padding: 0.5rem;
    border-radius: 0.25rem;

    /* Center absolute position element horizontally */
    text-align: center;
    left: 0;
    right: 0;
    margin: 0 auto;
    width: fit-content;
}

.main-portrait {
    /* Remove space between bottom of image and parent container */
    display: block;

    height: 250px;
    border-radius: 0.25rem;
}

header h2 {
    margin-top: 1.5rem;
    margin-bottom: 1rem;
}

/* === Main === */

main {
    background-color: white;
    padding: 2rem 1rem 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

.projects-container {
    width: 100%;
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(auto-fill, minmax(0, 300px));
    grid-auto-rows: 1fr;
    gap: 1.5rem;
}

.project {
    border-radius: 4px;
    box-shadow: var(--box-shadow);
    padding: 2rem 1rem;
    max-width: 300px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    position: relative;
}

.project-card-link {
    border-radius: 4px;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.project-img {
    border-radius: 4px;
    max-height: 230px;
    max-width: 230px;
}

.project-title-and-links {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 0.25rem;
}

.project-title-and-links > h3 {
    margin-right: auto;
}

.project-title-and-links > a {
    padding: 0.25rem;
    z-index: 2;
}

.devicon-github-original {
    display: block;
}

.external-link {
    display: block;
    width: 1.5rem;
}

/* === Footer === */

footer {
    background-color: var(--main-color);
    color: white;
    display: flex;
    flex-direction: column;
}

footer h2 {
    text-align: center;
}

.contact-info {
    padding: 2rem 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.contact-links {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

.contact-links > a {
    padding: 0.25rem;
    color: white;
}

.contact-links > a > i {
    display: block;
    font-size: 2rem;
}

.footer-img {
    display: block;
    width: 100%;
}

/* === Tablet Breakpoint === */

@media (min-width: 600px) {
    /* === Header === */

    header {
        padding: 8rem 5rem 1rem;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .colored-slant {
        transform: translateY(calc(-100% + 400px)) rotate(-10deg);
    }

    .header-content {
        display: inline-block;
        box-shadow: var(--box-shadow);
        border-radius: 4px;
        padding: 3rem 1rem;
        background-color: white;
        max-width: 530px;
    }

    header h1 {
        padding: 0;
        background-color: transparent;
        top: 0.5rem;
        right: -9rem;
        bottom: auto;
        left: auto;
    }

    header h2 {
        margin-top: 0;
        text-align: center;
    }

    .main-portrait-container {
        float: left;
        margin: 0 1rem -5rem 0;
        top: -5rem;
        transform: scale(1.2);
        transform-origin: right bottom;
    }

    /* === Main === */

    main {
        gap: 2rem;
    }

    /* === Footer === */

    footer {
        padding: 2rem;
        flex-direction: row;
        justify-content: center;
        gap: 1rem;
    }

    footer > * {
        max-width: 400px;
    }

    .contact-info {
        padding: 0;
        justify-content: center;
        flex: 1;
    }

    footer > picture {
        flex: 1;
        display: flex;
        justify-content: center;
    }

    .footer-img {
        border-radius: 4px;
        width: auto;
        max-height: 300px;
    }
}

@media (min-width: 1000px) {
    /* === Header === */

    header {
        padding: 5rem 5rem 3rem;
    }

    .colored-slant {
        height: 150%;
        transform: translateY(calc(-100% + 300px)) rotate(-5deg);
    }

    .header-content {
        max-width: 700px;
        padding: 0 1rem;
    }

    header h1 {
        padding: 0.5rem;
        background-color: rgba(39, 39, 39, 0.8);
        top: auto;
        right: 0;
        bottom: 0.5rem;
        left: 0;
    }

    header h2 {
        margin-top: 1.5rem;
    }

    .main-portrait-container {
        transform-origin: right center;
        top: 0;
        margin-bottom: 0;
    }

    /* === Main === */

    .projects-container {
        grid-template-columns: repeat(3, auto);
    }

    /* === Footer === */

    .contact-info {
        gap: 1.5rem;
    }
}

@media (min-width: 2300px) {
    .colored-slant {
        height: 150%;
        transform: translateY(calc(-100% + 300px)) rotate(-3deg);
    }
}

/* === Hover Effects === */

@media (hover: hover) {
    /* === Main === */

    .project {
        transition: transform 200ms ease-in-out;
    }

    .project:hover {
        transform: translateY(-6px);
    }

    .project-title-and-links > a {
        transition: transform 200ms ease-in-out;
    }

    .project-title-and-links > a:hover {
        transform: scale(1.1);
    }

    /* === Footer === */

    .contact-links > a {
        transition: transform 200ms ease-in-out;
    }

    .contact-links > a:hover {
        transform: scale(1.1);
    }
}

